  FIXME: We should better define a MAXVALUE, like GWEN_MAXVAL_UINT64 and
  let configure determine this type (like the other stuff), because the
  suffix "LL" tells the compiler that this is a "long long" value, which isn't
  necessarily the case for 64 bit architectures...
- redefined GWEN_WAITCALLBACK_PROGRESS_NONE as "-1". FIXME: Does this result
  in 0xffffffffffffffff ??


2005-07-28   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Fix AC_CHECK_LIB usage -- it *must* have a
	ACTION_IF_FOUND or otherwise the -lLIB command is added to LIBS
	automatically.


2005/07/27: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_BufferedIO_ReadRawForced() now returns an error (not a warning) when
  only partial data has been read
- GWEN_MsgEngine: removed '"' from list of default delimiters
- GWEN_MsgEngine: removed '"' from list of characters to escape
- improved structure of new OHBCI keyfiles:
   c3 xx xx 16 00 05 "OHBCI" VMAJOR VMINOR CRYPT
   -> new tags:
     GWEN_CRYPTTOKEN_OHBCI_TAG_MEDIUM            0xc3
       GWEN_CRYPTTOKEN_OHBCI_TAG_CRYPT_OLD       0xc1 (was old DES)
      (GWEN_CRYPTTOKEN_OHBCI_TAG_CRYPT)          0xc2 (DES)
       GWEN_CRYPTTOKEN_OHBCI_TAG_CRYPT_BF        0xc3
  The plugin should still read old files and write them as they have been
  read, but new files will be in the new format.


2005-07-27   Christian Stimming <stimming@tuhh.de>

	* plugins/crypttoken/ohbci/ohbci.c: Fix more signedness warnings:
	When using GWEN_CryptManager_GetPin, the password is returned in a
	'unsigned char*' buffer but has to be used in a 'char*' buffer
	afterwards. Added temporary buffer and copying so that the correct
	signedness is used where needed.

	* gwenui/tablewidget.c, textwidget.c, widget.c: Fix gcc4 warnings
	about different pointer signedness by adapting char* and unsigned
	char* pointers to the actual function prototypes.


2005/07/26: Martin Preuss<martin@libchipcard.de>